--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.1",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15",
-    "socket.io": "^4.5.0"
+    "validator": "^13.7.0"
   }
 }
